# freemap

./: .gitignore  CMakeLists.txt  README.md
src/: environment.h  freemap.c  freemap.h  freemap_test.cc
test/: freemap_test.cc
